# budgie

./: Makefile.am  common.mk  configure.ac  index.html  params.json
data/: Makefile.am  app.css  budgie.gresource.xml  preferences.ui  status-area.ui
src/: Makefile.am  budgie-control-bar.c  budgie-media-view.c  budgie-media-view.h  budgie-settings-dialog.c  budgie-settings-dialog.h  budgie-status-area.c  budgie-status-area.h  budgie-track-list.c  budgie-track-list.h  budgie-window.c  budgie-window.h  main.c  util.c
src/db/: budgie-db.c  budgie-db.h
tests/: Makefile.am  budgie-db-test.c
